--- a/771.html
+++ b/771.html
@@ -104,10 +104,10 @@
             <p class="listingName">LIMITLESS</p>
             <p class="listingName">PANTS</p>
             <p class="listingName">$50</p></a>
-        <a class="imgA" href="hoodie1.html"> <img class="prod" src ="imgs/products/mousepad/mousepad.jpg">
-            <p class="listingName">Item Name</p>
-            <p class="listingName">Item Name</p>
-            <p class="listingName">$9.99</p></a>
+        <a class="imgA" href="https://kl9y.com/products/9-of-hearts-pants"> <img class="prod" src ="imgs/products/9-of-hearts-pants/9-of-hearts-pants.png">
+            <p class="listingName">9 OF HEARTS</p>
+            <p class="listingName">PANTS</p>
+            <p class="listingName">$55</p></a>
     </div>
 
 
