about and contact added

--- a/771.html
+++ b/771.html
@@ -16,6 +16,9 @@
                  <source src="imgs/WebVidBGLogo.mp4" type="video/mp4">
              </video>
          </div>
+
+
+
          <nav>
             <div class="navbar">
               <div class="container nav-container">
@@ -28,12 +31,13 @@
                 <div class="menu-items">
                   <li><a href="https://kl9y.com/">Home</a></li>
                   <li><a href="https://kl9y.com/LimitlessPotential">New Releases</a></li>
-                  <li><a href="https://kl9y.com/BTS">Behind The Scenes</a></li>
-                  <li><a href="https://kl9y.com/Contact">Contact</a></li>
+                  <li><a href="https://kl9y.com/about">About Us</a></li>
+                  <li><a href="https://kl9y.com/contact">Contact</a></li>
                 </div>
               </div>
             </div>
           </nav>
+
         <div class="navBar" style="text-align: center; padding-top: 40px; padding-bottom: 40px;">
             <nav>
                 <ul style="list-style-type: none; margin: 0; padding: 0; display: inline-block;">
@@ -47,20 +51,19 @@
                         <a class="navElem" href="https://kl9y.com/privacy">New Releases</a>
                         <div class="dropdown-content">
                             <a href="https://kl9y.com/LimitlessPotential">Limitless Potential</a>
-                            
                         </div>
                     </li>
                     <li style="display: inline;">
                         <a class="navElem">|</a>
                     </li>
                     <li style="display: inline;">
-                        <a class="navElem" href="https://kl9y.com/privacy">Behind The Scenes</a>
+                        <a class="navElem" href="https://kl9y.com/about">About Us</a>
                     </li>
                     <li style="display: inline;">
                         <a class="navElem">|</a>
                     </li>
                     <li class="dropdown1">
-                        <a class="navElem" href="https://kl9y.com/Contact">Contact Us</a>
+                        <a class="navElem" href="https://kl9y.com/contact">Contact</a>
                     </li>
                 </ul>
             </nav>
