--- a/about.html
+++ b/about.html
@@ -68,25 +68,55 @@
          </div>
          <div style="margin-top:3%"></div>
          <h1>OUR STORY</h1>
-         <p class="aboutText">If you're seeing this thank you for visiting kl9y.com! That also means you wanna know about us. Let's start from the beginning, shall we? One day some kid named Myth also known as Nick was looking for a teammate to play a tournament with back in 2022 and low and behold found some guy named KL9Y. They hit it off and almost won a prize. 
+         <p class="aboutText">If you're seeing this thank you for visiting kl9y.com! That also means you wanna know about us. Let's start from the beginning, shall we?
+         </p>
+
+         <p class="aboutText">
+            One day some kid named Myth also known as Nick was looking for a teammate to play a tournament with back in 2022 and low and behold found some guy named KL9Y. 
+            They hit it off and almost won a prize. 
             They continued to talk from time to time checking up on eachother seeing as how they were living similar 
-            lives. Until one day everything changed. Myth reached out to play some games and talk, when they remembered 
-            why they become friends in the first place. These guys became so tight that there wasn't one day going by 
-            that they weren't talking and gaming. That wasn't just it. Myth had a dream, a dream of starting a brand 
+            lives. Until one day everything changed. 
+
+         </p>
+
+         <p class="aboutText">
+            Myth reached out to play some games and talk, when they remembered 
+            why they become friends in the first place. These guys became so tight that there wasn't a day going by 
+            that they weren't talking and gaming. That wasn't just it. 
+         </p>
+
+         <p class="aboutText">
+            Myth had a dream, a dream of starting a brand 
             that would change everything for the both of them. At first it was a simple idea sprouted from that dream 
-            but that all changed when Klay bought the domain of kl9y.com. Myth thought what a better way of making 
+            but that all changed when Klay bought the domain of kl9y.com. 
+         </p>
+
+         <p class="aboutText">
+            Myth thought, what a better way of making 
             this dream come true than with his best friend who had experience in software and coding, just like him 
-            and who had a similar vision. They brainstormed for months thinking about the brand, it's logo, what it 
-            would represent. Finally, it hit them. Clothes that were affordable and comfortable with appealing designs. 
+            and who had a similar vision. They brainstormed for months thinking about the brand, the logo, what it 
+            would represent. Finally, it hit them. 
+         </p>
+
+         <p class="aboutText">
+            Clothes that were affordable and comfortable with appealing designs. 
             Something you don't see often anymore. They worked on designs going through hundreds and they finally 
-            settled. Something was wrong though. Their supplier fell through but that didn't stop them. After 
-            countless days of looking for a new supplier, they found someone better than the last who could truly 
-            achieve their dream. And at last kl9y.com would be born. They continued to work and grind progressing 
+            settled. Something was wrong though. 
+         </p>
+
+         <p class="aboutText">
+            Their supplier fell through but that didn't stop them. After 
+            countless days of looking for a new supplier, they found someone better than the last and who could truly 
+            achieve their dream. And at last kl9y.com would be born. 
+         </p>
+
+         <p class="aboutText">
+            They continued to work and grind progressing 
             this website made from scratch until you see what is today. After hard work and ups and downs, 
             kl9y.com is here. This isn't just a brand however. KL9Y is a lifestyle. A lifestyle of perseverance, achieving 
             greatness, and knowing that you have limitless potential.
-
          </p>
+         <div style = "margin-bottom:20%"></div>
        
         
         <script src ="../script.js"></script>
