--- a/products/vintage-black.html
+++ b/products/vintage-black.html
@@ -14,8 +14,7 @@
         <div class="logoHolder">
             <a href="https://kl9y.com"><img class="kl9yLogo" src="../imgs/9yOFFICIALSmaller.png"></a>
         </div>
-
-         <nav>
+        <nav>
             <div class="navbar">
               <div class="container nav-container">
                   <input class="checkbox" type="checkbox" name="" id="" />
@@ -27,16 +26,16 @@
                 <div class="menu-items">
                   <li><a href="https://kl9y.com/">Home</a></li>
                   <li><a href="https://kl9y.com/LimitlessPotential">New Releases</a></li>
-                  <li><a href="https://kl9y.com/BTS">Behind The Scenes</a></li>
-                  <li><a href="https://kl9y.com/Contact">Contact</a></li>
+                  <li><a href="https://kl9y.com/about">About Us</a></li>
+                  <li><a href="https://kl9y.com/contact">Contact</a></li>
                 </div>
               </div>
             </div>
           </nav>
-        <div class="navBar" style="text-align: center; padding-top: 40px;">
+
+        <div class="navBar" style="text-align: center; padding-top: 40px; padding-bottom: 40px;">
             <nav>
                 <ul style="list-style-type: none; margin: 0; padding: 0; display: inline-block;">
-
                     <li style="display: inline;">
                         <a class="navElem" href="https://kl9y.com/privacy">Shop All</a>
                     </li>
@@ -53,19 +52,18 @@
                         <a class="navElem">|</a>
                     </li>
                     <li style="display: inline;">
-                        <a class="navElem" href="https://kl9y.com/privacy">Behind The Scenes</a>
+                        <a class="navElem" href="https://kl9y.com/about">About Us</a>
                     </li>
                     <li style="display: inline;">
                         <a class="navElem">|</a>
                     </li>
                     <li class="dropdown1">
-                        <a class="navElem" href="https://kl9y.com/Contact">Contact Us</a>
+                        <a class="navElem" href="https://kl9y.com/contact">Contact</a>
                     </li>
-                    
-
                 </ul>
             </nav>
          </div>
+
 
 
 
