color option added

--- a/771.html
+++ b/771.html
@@ -39,12 +39,12 @@
             
             <a class="imgA" href="https://kl9y.com/products/vintage-black"> <img class="prod" src ="imgs/products/vintage-black/vintage-black.jpg">
                 <p class="listingName">VINTAGE WASH</p>
-                <p class="listingName">BLACK HOODIE</p>
+                <p class="listingName">HOODIE</p>
                 <p class="listingName">$40</p></a>
-            <a class="imgA" href="https://kl9y.com/products/vintage-purple"> <img class="prod" src ="imgs/products/vintage-purple/vintage-purple.jpg">
-                <p class="listingName">VINTAGE WASH</p>
-                <p class="listingName">PURPLE HOODIE</p>
-                <p class="listingName">$40</p>
+            <a class="imgA" href="https://kl9y.com/products/9y-hoodie"> <img class="prod" src ="imgs/products/9y-hoodie/d1605d33-0416-437e-9b5b-78af8acd8f07.png">
+                <p class="listingName">9Y LOGO</p>
+                <p class="listingName">HOODIE</p>
+                <p class="listingName">$50</p>
             </a>
         </div>
 
