--- a/products/vintage-black.html
+++ b/products/vintage-black.html
@@ -28,12 +28,20 @@
                 <div class="imageThumbnails">
                     <img class="thumbnails" src="../imgs/products/vintage-black/vintage-black-irl2.jpg" onclick="changeImage('../imgs/products/vintage-black/vintage-black-irl2.jpg')">
                     <img class="thumbnails" src="../imgs/products/vintage-black/vintage-black.jpg" onclick="changeImage('../imgs/products/vintage-black/vintage-black.jpg')">
+                    <img class="thumbnails" src="../imgs/products/vintage-purple/vintage-purple.jpg" onclick="changeImage('../imgs/products/vintage-purple/vintage-purple.jpg')">
                 </div>
             </div>
             <div class="prodDetails">
-                <h1>VINTAGE WASH BLACK HOODIE</h1>
+                <h1>VINTAGE WASH HOODIE</h1>
                 <p class="priceText">$ 40</p>
-                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/00g6r1eDoefhdsQ004';">BUY NOW</button>
+                <div class="colorOptions">
+                    <input type="radio" id="colorBlack" name="color" value="black" onchange="updateBuyNowLink()" checked>
+                    <label for="colorBlack">Black</label>
+                    
+                    <input type="radio" id="colorPurple" name="color" value="purple" onchange="updateBuyNowLink()">
+                    <label for="colorPurple">Purple</label>
+                </div>
+                <button id="buyNowBtn" class="buyNowBtn" onclick="redirectToBuy()">BUY NOW</button>
    
                 
 
