product page update

--- a/products/9y-hoodie.html
+++ b/products/9y-hoodie.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Vintage Wash Black</title>
+        <title>9Y Logo Hoodie</title>
         <link rel="icon" type="image/x-icon" href="../imgs/favicon.png">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,15 +31,17 @@
                 </div>
             </div>
             <div class="prodDetails">
-                <h1>VINTAGE WASH BLACK HOODIE</h1>
-                <p class="priceText">$ 40</p>
+                <h1>9Y LOGO HOODIE</h1>
+                <p class="priceText">$ 50</p>
                 <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/00g6r1eDoefhdsQ004';">BUY NOW</button>
    
                 
 
                 <p class = "detailText">DETAILS</p>
-                <p class="detailText">100% cotton</p>
-                <p class="detailText">8.25 oz fleece</p>
+                <p class="detailText">50% cotton, 50% polyester blend fleece</p>
+                <p class="detailText">Fabric weight: 8 oz./yd²</p>
+                <p class="detailText">DTG Printed on the back</p>
+                <p class="detailText">Blank on the front</p>
             </div>
         </div>
        
