--- a/products/vintage-black.html
+++ b/products/vintage-black.html
@@ -35,13 +35,13 @@
                 <h1>VINTAGE WASH HOODIE</h1>
                 <p class="priceText">$ 40</p>
                 <div class="colorOptions">
-                    <input type="radio" id="colorBlack" name="color" value="black" onchange="updateBuyNowLink()" checked>
+                    <input type="radio" id="colorBlack" name="color" value="black" onchange="updateBuyNowLink(`window.location.href='https://buy.stripe.com/00g6r1eDoefhdsQ004';`)" checked>
                     <label for="colorBlack">Black</label>
                     
-                    <input type="radio" id="colorPurple" name="color" value="purple" onchange="updateBuyNowLink()">
+                    <input type="radio" id="colorPurple" name="color" value="purple" onchange="updateBuyNowLink(`window.location.href='https://buy.stripe.com/3cs9Ddan82wz4WkfZ6';`)">
                     <label for="colorPurple">Purple</label>
                 </div>
-                <button id="buyNowBtn" class="buyNowBtn" onclick="redirectToBuy()">BUY NOW</button>
+                <button id="buyNowBtn" class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/00g6r1eDoefhdsQ004';">BUY NOW</button>
    
                 
 
