--- a/products/9y-hoodie.html
+++ b/products/9y-hoodie.html
@@ -40,8 +40,8 @@
                 <p class = "detailText">DETAILS</p>
                 <p class="detailText">50% cotton, 50% polyester blend fleece</p>
                 <p class="detailText">Fabric weight: 8 oz./yd²</p>
-                <p class="detailText">DTG Printed on the back</p>
-                <p class="detailText">Blank on the front</p>
+                <p class="detailText">DTG Printed</p>
+               
             </div>
         </div>
        
