--- a/products/champion-graffiti.html
+++ b/products/champion-graffiti.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Limitless Pants</title>
+        <title>9 Of Hearts</title>
         <link rel="icon" type="image/x-icon" href="../imgs/favicon.png">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,28 +15,30 @@
             <a href="https://kl9y.com"><img class="kl9yLogo" src="../imgs/9yOFFICIALSmaller.png"></a>
         </div>
 
-
         <script src="../script.js"></script>
         <script>renderNav();</script>
 
 
         <div class="prodMain">
             <div class="prodImg">
-                <img  id="productImage" src="../imgs/products/9-of-hearts-pants/9-of-hearts-pants.png" style="width: 100%;">
+                <img src="../imgs/products/champion-graffiti/KL9YGraffitiLimitlessPotential.jpg" style="width: 100%;">
             </div>
             <div class="prodDetails">
-                <h1>LIMITLESS POTENTIAL PANTS</h1>
+                <h1>9 Of Hearts Hoodie</h1>
                 <p class="priceText">$ 55</p>
-                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/8wMg1BgLw3ADfAY00b';">BUY NOW</button>
+                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/5kAaHheDo6MP74sbJ2';">BUY NOW</button>
+   
 
                 <p class = "detailText">DETAILS</p>
-                <p class="detailText">95% polyester, 5% spandex</p>
-                <p class="detailText">7.5 oz /yd²</p>
-                <p class="detailText">Soft fabric</p>
+                <p class="detailText">50% cotton, 50% polyester blend fleece</p>
+                <p class="detailText">Fabric weight: 9 oz./yd²</p>
+                <p class="detailText">DTG Printed on the front</p>
+                <p class="detailText">Blank on the back</p>
+                <p class="detailText">Champion logo on sleeve</p>
             </div>
         </div>
        
         
-        <script src ="../script.js"></script>
+        <script src="" async defer></script>
     </body>
 </html>
