--- a/products/pants.html
+++ b/products/pants.html
@@ -20,16 +20,13 @@
 
         <div class="prodMain">
             <div class="prodImg">
-                <img  id="productImage" src="../imgs/products/pants/pant white.jpg" style="width: 100%;">
-                <div class="imageThumbnails">
-                    <img class="thumbnails" src="../imgs/products/pants/pant white.jpg" onclick="changeImage('../imgs/products/pants/pant white.jpg')">
-                    <img class="thumbnails" src="../imgs/products/pants/pant black.jpg" onclick="changeImage('../imgs/products/pants/pant black.jpg')">
-                </div>
+                <img  id="productImage" src="../imgs/products/pants/LimitlessPotentialPants.jpg" style="width: 100%;">
+                
             </div>
             <div class="prodDetails">
                 <h1>LIMITLESS POTENTIAL PANTS</h1>
-                <p class="priceText">$ 50</p>
-                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/8wM3eP2UGfjl60o9AK';">BUY NOW</button>
+                <p class="priceText">$ 55</p>
+                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/4gw4iT52O3AD60o8wN';">BUY NOW</button>
 
                 <p class = "detailText">DETAILS</p>
                 <p class="detailText">95% polyester, 5% spandex</p>
