--- a/products/champion-graffiti.html
+++ b/products/champion-graffiti.html
@@ -24,7 +24,7 @@
                 <img src="../imgs/products/champion-graffiti/KL9YGraffitiLimitlessPotential.jpg" style="width: 100%;">
             </div>
             <div class="prodDetails">
-                <h1>9 Of Hearts Hoodie</h1>
+                <h1>CHAMPION GRAFFITI CREW NECK</h1>
                 <p class="priceText">$ 55</p>
                 <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/5kAaHheDo6MP74sbJ2';">BUY NOW</button>
    
