--- a/products/graffiti-hoodie.html
+++ b/products/graffiti-hoodie.html
@@ -31,7 +31,7 @@
                   </div>
             </div>
             <div class="prodDetails">
-                <h1>VINTAGE WASH HOODIE</h1>
+                <h1>GRAFFITI HOODIE</h1>
                 <p class="priceText">$ 40</p>
                 <div class="colorOptions">
 
