--- a/products/limitless-tee.html
+++ b/products/limitless-tee.html
@@ -24,7 +24,7 @@
                 
             </div>
             <div class="prodDetails">
-                <h1>LIMITLESS POTENTIAL PANTS</h1>
+                <h1>LIMITLESS POTENTIAL TEE</h1>
                 <p class="priceText">$ 35</p>
                 <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/00gcPpan8c793SgdRb';">BUY NOW</button>
 
