--- a/products/limitless-tee.html
+++ b/products/limitless-tee.html
@@ -29,9 +29,8 @@
                 <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/00gcPpan8c793SgdRb';">BUY NOW</button>
 
                 <p class = "detailText">DETAILS</p>
-                <p class="detailText">95% polyester, 5% spandex</p>
-                <p class="detailText">7.5 oz /yd²</p>
-                <p class="detailText">Soft fabric</p>
+                <p class="detailText">100% cotton</p>
+                
             </div>
         </div>
        
