--- a/products/graffiti-hoodie.html
+++ b/products/graffiti-hoodie.html
@@ -48,7 +48,7 @@
                 
 
                 <p class = "detailText">DETAILS</p>
-                <p class="detailText">100% cotton</p>
+                <p class="detailText">50% cotton, 50% polyester</p>
                 <p class="detailText">8.25 oz fleece</p>
             </div>
         </div>
