limitless page updated

--- a/products/9y-hoodie.html
+++ b/products/9y-hoodie.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="prodDetails">
-                <h1>9Y LOGO HOODIE</h1>
+                <h1>KL9Y LOGO HOODIE</h1>
                 <p class="priceText">$ 55</p>
 
                 <div class="colorOptions">
