--- a/products/graffiti-hoodie.html
+++ b/products/graffiti-hoodie.html
@@ -45,7 +45,9 @@
                 </div>
                 <button id="buyNowBtn" class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/5kA7v51QC2wz3Sg5kw';">BUY NOW</button>
    
-                
+                <div class="sizeChartDivKlay">
+                    <button class= "sizingBtnKlay" id="toggleButton" onclick="sizingChange()">˅ SIZE GUIDE</button>
+                    <img class="sizingKlay" src="../imgs/products/graffiti-hoodie/size-guide.png">
 
                 <p class = "detailText">DETAILS</p>
                 <p class="detailText">50% cotton, 50% polyester</p>
