--- a/products/graffiti-hoodie.html
+++ b/products/graffiti-hoodie.html
@@ -44,6 +44,7 @@
                     
                 </div>
                 <button id="buyNowBtn" class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/cN23eP7aW0oragEbIV';">BUY NOW</button>
+                <button id="buyNowBtn" class="buyNowBtn" onclick="addToCart(productImage.src, 'youtube.com')">ADD TO CART</button> 
    
                 <div class="sizeChartDivKlay">
                     <button class= "sizingBtnKlay" id="toggleButton" onclick="sizingChange()">˅ SIZE GUIDE</button>
