cart icon positioning fix

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
 
          <div style="margin-top:3%"></div>
-         <h1>OUR STORY</h1>
+         <h1 class="cartLabel">OUR STORY</h1>
          <p class="aboutText">If you're seeing this thank you for visiting kl9y.com! That also means you wanna know about us. Let's start from the beginning, shall we?
          </p>
 
