--- a/cart.html
+++ b/cart.html
@@ -17,6 +17,7 @@
         
         <script src="script.js"></script>
         <script>renderNav();</script>
+        <h1 class="cartLabel">YOUR CART</h1>
 
         <button onclick="addToCart('imgs/products/graffiti-hoodie/WhiteGraffiti.jpg', 'youtube.com')">ADD</button>
         <button onclick="removeFromCart('imgs/products/vintage-black/vintage-black-irl2.jpg')">REMOVE</button>
