--- a/cart.html
+++ b/cart.html
@@ -33,7 +33,7 @@
                 font-weight: bold;
                 font-size: large;
                 color: white; width: 10%;">$ 50</p>
-                <button style="all: unset; text-decoration: none; background: rgb(44, 44, 44); font-family: Kl9yFont; margin-left: 10px; cursor: pointer; font-size: small; color: white; margin-right: 5%;">remove</button>
+                <button style="all: unset; text-decoration: none; background: rgb(44, 44, 44); font-family: Kl9yFont; margin-left: 10px; cursor: pointer; font-size: small; color: white; margin-right: 5%;">X</button>
             </div>
 
         </div>
