--- a/cart.html
+++ b/cart.html
@@ -24,16 +24,25 @@
 
 
 
-        <div style="text-align: center; align-items: center; align-content: center; justify-content: center; display:block; margin-top: 20px;">
+        <div class="cartOutsideContainer">
+            <div class="cartRow">
+                <img class="cartImg" src="imgs/products/graffiti-hoodie/WhiteGraffiti.jpg">
+                <p class="cartItemName">Graffiti Hoodie</p>
+                <p class="cartPrice">$ 50</p>
+                <button class="cartRemoveBtn">X</button>
+            </div>
 
-            <div style="display: flex; flex-direction: row; justify-content: center; align-items: center; text-align: center; border-width: 1px; border-color: black; border-style: solid; ">
-                <img style="width: 10%; margin-top: 20px; margin-bottom: 20px; margin-left: 5%;" src="imgs/products/graffiti-hoodie/WhiteGraffiti.jpg">
-                <p style="padding-left: 10%; padding-right: 10%; color: #ce6ee9; font-family: Kl9yFont; width: 30%;">Graffiti Hoodie</p>
-                <p style="font-family: Arial, Helvetica, sans-serif;
-                font-weight: bold;
-                font-size: large;
-                color: white; width: 10%;">$ 50</p>
-                <button style="all: unset; text-decoration: none; background: rgb(44, 44, 44); font-family: Kl9yFont; margin-left: 10px; cursor: pointer; font-size: small; color: white; margin-right: 5%;">X</button>
+            <div class="cartRow">
+                <img class="cartImg" src="imgs/products/graffiti-hoodie/WhiteGraffiti.jpg">
+                <p class="cartItemName">Graffiti Hoodie</p>
+                <p class="cartPrice">$ 50</p>
+                <button class="cartRemoveBtn">X</button>
+            </div>
+            <div class="cartRow">
+                <img class="cartImg" src="imgs/products/graffiti-hoodie/WhiteGraffiti.jpg">
+                <p class="cartItemName">Graffiti Hoodie</p>
+                <p class="cartPrice">$ 50</p>
+                <button class="cartRemoveBtn">X</button>
             </div>
 
         </div>
