init request added

--- a/771.html
+++ b/771.html
@@ -12,6 +12,7 @@
     </head>
     <body>
         <script src="script.js"></script>
+        <script>makeInitReq()</script>
         
         <div class="cartContainer">
             <a href="https://kl9y.com/cart"><img class="cart" src="./assets/cart.png"></a> 
