loading animation added

--- a/cart.html
+++ b/cart.html
@@ -18,6 +18,8 @@
         <script src="script.js"></script>
         <script>renderNav();</script>
         <h1 class="cartLabel">YOUR CART</h1>
+
+        <div id="loadingAnimation">You are next in line to checkout</div>
         
         <div class="cartOutsideContainer">
             <script>showCart();</script>
