--- a/success.html
+++ b/success.html
@@ -23,6 +23,7 @@
         <div class="cartOutsideContainer">
             <script>showOrder();</script>
         </div>
+        <script>successOrder()</script>
 
     
     </body>
