--- a/products/testing.html
+++ b/products/testing.html
@@ -39,6 +39,18 @@
                 <p class="priceText">$ 55</p>
                 
                 <button id="buyNowBtn" class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/cN23eP7aW0oragEbIV';">BUY NOW</button>
+
+                <div class="dropdownSize">
+                    <button class="dropbtn">Select Size</button>
+                    <div class="dropdownSize-content">
+                        <a href="#" onclick="">S</a>
+                        <a href="#" onclick="">M</a>
+                        <a href="#" onclick="">L</a>
+                        <a href="#" onclick="">XL</a>
+                    </div>
+                </div>
+
+
                 <button id="buyNowBtn" class="buyNowBtn" onclick="addToCart(productImage.src, 'price_1NNkJZJObEa52vYfhIHWhg0i')">ADD TO CART</button> 
    
                 <div class="sizeChartDivKlay">
