--- a/products/9-of-hearts.html
+++ b/products/9-of-hearts.html
@@ -21,12 +21,35 @@
 
         <div class="prodMain">
             <div class="prodImg">
-                <img src="../imgs/products/9-of-hearts/9ofhearts.png" style="width: 100%;">
+                <img id="productImage" src="../imgs/products/9-of-hearts/9ofhearts.png" style="width: 100%;">
             </div>
             <div class="prodDetails">
                 <h1>9 Of Hearts Hoodie</h1>
                 <p class="priceText">$ 50</p>
+                <div id="productIdForCart" class="dev"></div>
+                <div id="pId1" class="dev">price_1NOVC2JObEa52vYfuKpZcZpe</div>
+                <div id="pId2" class="dev">price_1NOVCHJObEa52vYf8FPOraFf</div>
+                <div id="pId3" class="dev">price_1NOVCVJObEa52vYfUyVkLqtp</div>
+                <div id="pId4" class="dev">price_1NOVD1JObEa52vYfPRLmFLDb</div>
                 <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/5kA7v53YK7QT74s6ot';">BUY NOW</button>
+
+                <div class="dropdownSize">
+                    <button id="sizeBtn" class="dropbtn" onclick="toggleOptions()">Select Size</button>
+                    <div id="sizeDropdown" class="dropdownSize-content">
+                        <a href="#sizeDropdown" onclick="changeSizeSelect('S')">S</a>
+                        <a href="#sizeDropdown" onclick="changeSizeSelect('M')">M</a>
+                        <a href="#sizeDropdown" onclick="changeSizeSelect('L')">L</a>
+                        <a href="#sizeDropdown" onclick="changeSizeSelect('XL')">XL</a>
+                    </div>
+                </div>
+
+
+                <button  class="buyNowBtn" onclick="addToCart(productImage.src)">ADD TO CART</button> 
+   
+                <div class="sizeChartDivKlay">
+                    <button class= "sizingBtnKlay" id="toggleButton" onclick="sizingChange()">˅ SIZE GUIDE</button>
+                    <img class="sizingKlay" src="../imgs/products/graffiti-hoodie/size-guide.png">
+                </div>
    
 
                 <p class = "detailText">DETAILS</p>
