--- a/products/mousepad.html
+++ b/products/mousepad.html
@@ -18,17 +18,16 @@
         <script src="../script.js"></script>
         <script>renderNav();</script>
 
-
-
-
         <div class="prodMain">
             <div class="prodImg">
-                <img src="../imgs/products/mousepad/ledmousepad.png" style="width: 100%;">
+                <img id="productImage" src="../imgs/products/mousepad/ledmousepad.png" style="width: 100%;">
             </div>
             <div class="prodDetails">
                 <h1>KL9Y GAMING MOUSEPAD</h1>
                 <p class="priceText">$ 40</p>
+                <div id="productIdForCart" class="dev">price_1NFAnqJObEa52vYfqD7YiZ26</div>
                 <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/4gweXx2UGfjl3Sg3cj';">BUY NOW</button>
+                <button  class="buyNowBtn" onclick="addToCart(productImage.src)">ADD TO CART</button> 
 
                 <p class = "detailText">DETAILS</p>
                 <p class="detailText">35.4" x 15.7"</p>
