added additions to every page

--- a/products/9-of-hearts.html
+++ b/products/9-of-hearts.html
@@ -11,11 +11,15 @@
         <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
+        <script src ="../script.js"></script>
+        <div class="cartContainer">
+            <a href="https://kl9y.com/cart"><img class="cart" src="../assets/cart.png"></a> 
+            <script>totalCart()</script>
+        </div>
         <div class="logoHolder">
             <a href="https://kl9y.com"><img class="kl9yLogo" src="../imgs/9yOFFICIALSmaller.png"></a>
         </div>
 
-        <script src="../script.js"></script>
         <script>renderNav();</script>
 
 
