--- a/products/limitless-tee.html
+++ b/products/limitless-tee.html
@@ -11,11 +11,16 @@
         <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
+        <script src ="../script.js"></script>
+        <div class="cartContainer">
+            <a href="https://kl9y.com/cart"><img class="cart" src="../assets/cart.png"></a> 
+            <script>totalCart()</script>
+        </div>
         <div class="logoHolder">
             <a href="https://kl9y.com"><img class="kl9yLogo" src="../imgs/9yOFFICIALSmaller.png"></a>
         </div>
 
-        <script src="../script.js"></script>
+      
         <script>renderNav();</script>
 
         <div class="prodMain">
@@ -27,10 +32,10 @@
                 <h1>LIMITLESS POTENTIAL TEE</h1>
                 <p class="priceText">$ 35</p>
                 <div id="productIdForCart" class="dev"></div>
-                <div id="pId1" class="dev">price_1NOXz4JObEa52vYfpRkbh1b4</div>
-                <div id="pId2" class="dev">price_1NOXzHJObEa52vYf7eWobe7B</div>
-                <div id="pId3" class="dev">price_1NOXzRJObEa52vYfj1ZIPBMB</div>
-                <div id="pId4" class="dev">price_1NOXziJObEa52vYfYtmQ4sm4</div>
+                <div id="pId1" class="dev">price_1NOq2pJObEa52vYfb1qSaF3c</div>
+                <div id="pId2" class="dev">price_1NOq38JObEa52vYf8LWCVuSQ</div>
+                <div id="pId3" class="dev">price_1NOq3RJObEa52vYfNU8RkdV2</div>
+                <div id="pId4" class="dev">price_1NOq3jJObEa52vYfa4FaskRC</div>
                 <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/00gcPpan8c793SgdRb';">BUY NOW</button>
 
                 <div class="dropdownSize">
@@ -48,7 +53,7 @@
    
                 <div class="sizeChartDivKlay">
                     <button class= "sizingBtnKlay" id="toggleButton" onclick="sizingChange()">˅ SIZE GUIDE</button>
-                    <img class="sizingKlay" src="../imgs/products/graffiti-hoodie/size-guide.png">
+                    <img class="sizingKlay" src="../imgs/products/limitless-tee/sizing-chart(tshirt).png">
                 </div>
 
                 <p class = "detailText">DETAILS</p>
