polished for release

--- a/products/9y-hoodie.html
+++ b/products/9y-hoodie.html
@@ -91,6 +91,8 @@
                 <p class="detailText">50% cotton, 50% polyester blend fleece</p>
                 <p class="detailText">Fabric weight: 8.25 oz./yd²</p>
                 <p class="detailText">DTG Printed</p>
+                <p class="detailText">Ships within 2 weeks</p>
+                <p class="detailText">All sales are final</p>
                
             </div>
         </div>
