--- a/products/graffiti-hoodie.html
+++ b/products/graffiti-hoodie.html
@@ -78,6 +78,8 @@
                 <p class = "detailText">DETAILS</p>
                 <p class="detailText">50% cotton, 50% polyester</p>
                 <p class="detailText">8.25 oz fleece</p>
+                <p class="detailText">Ships within 2 weeks</p>
+                <p class="detailText">All sales are final</p>
             </div>
         </div>
     </body>
