--- a/products/hat.html
+++ b/products/hat.html
@@ -71,8 +71,10 @@
 
                 <p class = "detailText">DETAILS</p>
                 <p class="detailText">100% cotton</p>
-                <p class="detailText">Embroidered</p>
+                <p class="detailText">Golf hats are embroidered, Trucker hat is printed</p>
                 <p class="detailText">Adjustable velcro</p>
+                <p class="detailText">Ships within 2 weeks</p>
+                <p class="detailText">All sales are final</p>
                
             </div>
         </div>
