--- a/products/limitless-tee.html
+++ b/products/limitless-tee.html
@@ -58,6 +58,8 @@
 
                 <p class = "detailText">DETAILS</p>
                 <p class="detailText">100% cotton</p>
+                <p class="detailText">Ships within 2 weeks</p>
+                <p class="detailText">All sales are final</p>
                 
             </div>
         </div>
