--- a/products/mousepad.html
+++ b/products/mousepad.html
@@ -36,6 +36,8 @@
                 <p class = "detailText">DETAILS</p>
                 <p class="detailText">35.4" x 15.7"</p>
                 <p class="detailText">BUILT IN LED LIGHTS</p>
+                <p class="detailText">Ships within 2 weeks</p>
+                <p class="detailText">All sales are final</p>
             </div>
         </div>
        
