--- a/products/pants.html
+++ b/products/pants.html
@@ -30,12 +30,37 @@
             <div class="prodDetails">
                 <h1>LIMITLESS POTENTIAL PANTS</h1>
                 <p class="priceText">$ 65</p>
+                <div id="productIdForCart" class="dev"></div>
+                <div id="pId1" class="dev">price_1NOq2pJObEa52vYfb1qSaF3c</div>
+                <div id="pId2" class="dev">price_1NOq38JObEa52vYf8LWCVuSQ</div>
+                <div id="pId3" class="dev">price_1NOq3RJObEa52vYfNU8RkdV2</div>
+                <div id="pId4" class="dev">price_1NOq3jJObEa52vYfa4FaskRC</div>
+
                 <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/4gw4iT52O3AD60o8wN';">BUY NOW</button>
+                <div class="dropdownSize">
+                    <button id="sizeBtn" class="dropbtn" onclick="toggleOptions()">Select Size</button>
+                    <div id="sizeDropdown" class="dropdownSize-content">
+                        <a href="#sizeDropdown" onclick="changeSizeSelect('S')">S</a>
+                        <a href="#sizeDropdown" onclick="changeSizeSelect('M')">M</a>
+                        <a href="#sizeDropdown" onclick="changeSizeSelect('L')">L</a>
+                        <a href="#sizeDropdown" onclick="changeSizeSelect('XL')">XL</a>
+                    </div>
+                </div>
+
+
+                <button  class="buyNowBtn" onclick="addToCart(productImage.src)">ADD TO CART</button> 
+   
+                <div class="sizeChartDivKlay">
+                    <button class= "sizingBtnKlay" id="toggleButton" onclick="sizingChange()">˅ SIZE GUIDE</button>
+                    <img class="sizingKlay" src="../imgs/products/pants/sizing-chart(pants).png">
+                </div>
 
                 <p class = "detailText">DETAILS</p>
                 <p class="detailText">95% polyester, 5% spandex</p>
                 <p class="detailText">7.5 oz /yd²</p>
                 <p class="detailText">Soft fabric</p>
+                <p class="detailText">Ships within 2 weeks</p>
+                <p class="detailText">All sales are final</p>
             </div>
         </div>
        
