--- a/products/splatter-paint.html
+++ b/products/splatter-paint.html
@@ -62,6 +62,8 @@
                 <p class="detailText">Fabric weight: 8.25 oz./yd²</p>
                 <p class="detailText">DTG Printed on the back</p>
                 <p class="detailText">Blank on the front</p>
+                <p class="detailText">Ships within 2 weeks</p>
+                <p class="detailText">All sales are final</p>
             </div>
         </div>
        
