--- a/products/vintage-wash.html
+++ b/products/vintage-wash.html
@@ -43,6 +43,11 @@
                     <label for="colorPurple">Purple</label>
                 </div>
                 <button id="buyNowBtn" class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/00g6r1eDoefhdsQ004';">BUY NOW</button>
+
+                <div class="sizeChartDivKlay">
+                    <button class= "sizingBtnKlay" id="toggleButton" onclick="sizingChange()">˅ SIZE GUIDE</button>
+                    <img class="sizingKlay" src="../imgs/products/vintage-black/vintage-sizing.png">
+                </div>
    
                 
 
@@ -50,6 +55,8 @@
                 <p class = "detailText">DETAILS</p>
                 <p class="detailText">100% cotton</p>
                 <p class="detailText">8.25 oz fleece</p>
+                <p class="detailText">Ships within 1 week</p>
+                <p class="detailText">All sales are final</p>
             </div>
         </div>
        
